[project]
name = "sims"
version = "2.0.2"
description = "Add your description here"
authors = [
    { name = "Zan Peeters" }
]
dependencies = [
    "matplotlib>=3.8.4",
    "scipy>=1.13.0",
    "xarray>=2024.3.0",
    "scikit-image>=0.23.1",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "setuptools>=69.5.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sims"]
